src/encoded/static/scss/encoded/modules/_static-pages.scss
/* ... */
/***
Unique styling for benchmarking pages
**/
body[data-pathname^="/data/benchmarking"] {
	
	#post-navbar-container>#content.container:not(.error-page) {
		width: 100%;
		max-width: calc(100% - 4em);
		margin: 0 2em;
	}

	// Hide titles
	.static-section-entry>.section-title { display: none; }

	// Header and description text
	.benchmarking-layout{
		>nav.nav-tabs {
			a.nav-link {
				color: #5D5E63;
				font-family: Inter;
				font-size: 16px;
				font-weight: 400; 

				&.active {
					color: #343741;
					font-weight: 600; 
					border-top: 4px solid #E99415;
				}
				&.disabled {
					color: #9BA5B7;
				}
			}
		}

		>.row>div {
			>h2 {
				color: #343741;
				font-family: Inter;
				font-size: 24px;
				font-weight: 600;
				margin-top: 5px;
			}

			>p {
				color: #5D5E63;
				font-family: Inter;
				font-size: 14px;
				line-height: 20px;
			}
		}
	}

	// Side nav
	.benchmarking-nav {

		>.benchmarking-nav-section {
			>.benchmarking-nav-section-title {
				margin-bottom: 10px;
			}
		}

		.accordion > ul {
			list-style-type: none;
			padding-left: 0;
			gap: 10px;
			display: flex;
			flex-direction: column;

			> li > div.collapse > ul,
			> li > div.collapsing > ul {
					list-style-type: none;
					padding-left: 0; 
				> li {
					padding-left: 15px;
				}
			}

			li.sidenav-link {
				font-family: Inter;
				font-size: 14px;
				font-weight: 400;

				> a {
					color: #717378;
				}

				&.top {
					font-size: 16px;
				}
				&.active {
					font-weight: 500;
					&.top {
						font-weight: 700;
					}
					&:not(.top) {
						border-radius: 4px;
						border: 1px solid #E2ECF2;
						background: #EBF3F9; 
					}
					
					> a {
						color: #343741;
					}
				}
			}

			span.navlink-drop {
				color: #717378;
				font-size: 16px;
				font-weight: 400;
				font-family: Inter;
				&.active {
					color: #343741;
					font-weight: 700;
				}
			}
		}
	}

	.tbd-notice {
		color: #343741;
		font-family: Inter;
		font-size: 20px;
		font-weight: 600;
	}

	.search-result-row.detail-closed >.columns.result-table-row>.search-result-column-block {
		&[data-first-visible-column=true] {
			padding-left: 15px !important;
		}

		>.inner>.toggle-detail-button-container {
			display: none;
		}
	}

	// May need to move this to search if we end up using this functionality elsewhere
	.batch-files-download-modal {
		> .modal-dialog {
			min-width: 75%;

			>.modal-content {
				border-radius: 11px;

				>.modal-header>.modal-title {
					color: #343741;
					font-size: 24px;
					font-weight: 600;
				}
				>.modal-body {
					h2 {
						color: #343741;
						font-size: 18px;
						font-weight: 600;
					}
			
					li {
						font-size: 14px;
					}

					.tsv-metadata-overview {
						border-radius: 7px;
						border: 1px solid #CAE5FE;
						background: #F1F9FF;
						box-shadow: none;
						gap: 30px;
						
						@include media-breakpoint-between(md, lg){
							gap: 50px;
						}

						@include media-breakpoint-between(lg, xl){
							gap: 70px;
						}

						@include media-breakpoint-up(xl){
							gap: 90px;
						}
			
						.tsv-metadata-stat-title {
							color: #387FC1;
						}
			
						.tsv-metadata-stat {
							color: #343741;
							font-size: 24px;
							font-weight: 600;
						}
					}

					/*** metadata.tsv modal ***/
					pre.curl-command {
						border: 1px dashed #dedede;
						padding: 5px;
						text-overflow: ellipsis;
					}
					.curl-command-wrapper i.icon-copy {
						margin-left: 5px;

						&:after {
							content : "Copy";
							font-family: $font-family-base;
							font-weight: 600;
							padding-left: 6px;
						}
					}
				}
				>.modal-footer {
					background-color: #F8F8F8;
				}
			}
		}
	}
}

